# C1_ZERO

./: .cursorrules  .gitignore  LICENSE  README.md  resume.md
.cursor/: bsl-help-platform-path.txt  ensure-mcp-services.ps1  (+6 more)
tools/1c-formsserver/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tools/1c-formsserver/data/: form_schema.json  formprompt.md  formprompt_edt.md
tools/1c-formsserver/edt_reference/: Form.xcore  Mapping.xcore
tools/1c-formsserver/src/mcp_forms/: __init__.py  __main__.py  config.py  edt_client.py  server.py
tools/1c-formsserver/src/mcp_forms/forms/: converter.py  generator.py  loader.py  templates.py
tools/1c-formsserver/src/mcp_forms/schema/: model.py  parser.py  validator.py
tools/1c-formsserver/src/mcp_forms/search/: __init__.py  embeddings.py  indexer.py  query.py
tools/1c-formsserver/src/mcp_forms/tools/: convert.py  edt.py  generate.py  schema.py  search.py  validate.py
tools/1c-formsserver/tests/: test_container.py  test_converter.py  test_edt.py  test_edt_format.py  test_search.py  test_validator.py
tools/1c-formsserver/tests/fixtures/: edt_catalog_element.form  logform_broken.xml  logform_catalog_element.xml  logform_document.xml  managed_simple.xml
tools/rlm-bsl-search/: .dockerignore  .editorconfig  .env.example  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  diagnose-service-win.ps1  docker-compose.example.yml  docker-entrypoint.sh  example.mcp.json  pyproject.toml  simple-install-from-pip.ps1  simple-install-from-pip.sh  simple-install.ps1  simple-install.sh
tools/rlm-bsl-search/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
tools/rlm-bsl-search/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
tools/rlm-bsl-search/.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
tools/rlm-bsl-search/benchmarks/: README.md  run_benchmark.py
tools/rlm-bsl-search/benchmarks/fixture/: Configuration.xml
tools/rlm-bsl-search/benchmarks/fixture/EventSubscriptions/: ПроверкаПередЗаписью.xml
tools/rlm-bsl-search/benchmarks/fixture/ScheduledJobs/: ОбновлениеЦен.xml
tools/rlm-bsl-search/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  ENV_REFERENCE.md  FAQ.md  HELPERS.md  INDEXING.md  INSTALL.md  LLM_QUERY.md  MODULE_MAP.md  PROJECT_REGISTRY.md  QUICKSTART.md  full_analysis_prompt.md
tools/rlm-bsl-search/evals/: conftest.py  metrics.py  run_ab_eval.sh  test_comparative.py  test_correctness.py  test_task_completion.py
tools/rlm-bsl-search/src/rlm_tools_bsl/: __init__.py  _config.py  _format.py  _paths.py  _service_linux.py  _service_win.py  bsl_helpers.py  bsl_index.py  bsl_knowledge.py  bsl_xml_parsers.py  cache.py  cli.py  extension_detector.py  format_detector.py  helpers.py  llm_bridge.py  projects.py  sandbox.py  server.py  service.py  session.py
tools/rlm-bsl-search/tests/: conftest.py  test_bsl_helpers.py  test_bsl_index.py  test_bsl_index_integration.py  test_bsl_knowledge.py  test_cache_cleanup.py  test_category_aliases.py  test_cli.py  test_config.py  test_extension_detector.py  test_extension_overrides.py  test_file_paths.py  test_find_references.py  test_form_parsers.py  test_format_detector.py  test_git_delta.py  test_help_recipes.py  test_helpers.py  test_integration_parsers.py  test_llm_bridge.py  test_object_synonyms.py  test_path_normalization.py  test_pointwise_refresh.py  test_prefilter_limit.py  test_projects.py  test_regions_headers.py  test_rlm_index_src_path.py  test_rlm_start_src_path.py  test_sandbox.py  test_search_unified.py  test_server.py  test_server_main.py  test_session.py  test_strategy_examples.py
(+1646 files in other folders)
