[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1c-formsserver"
version = "0.1.0"
description = "MCP server for 1C managed form generation, validation, and search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["1c", "1c-enterprise", "mcp", "forms", "form-xml", "managed-forms", "edt", "logform", "validation", "generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastmcp>=2.0",
    "lxml>=5.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
search = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-forms-server = "mcp_forms.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
